--- a/main.html
+++ b/main.html
@@ -10,7 +10,40 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table>
+	<caption>Item Cart</caption>
+	<thead>
+		<tr>
+			<th><b>Item</b>	</th>
+			<th><b>Price</b></th>
+			<th><b>Quantity</b></th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td> <b>Banana</b></td>
+			<td><span>&#8377;</span>1.00 </td>
+			<td>3</td>
+		</tr>
+		
+		<tr>
+			<td> <b>Burger</b></td>
+			<td><span>&#8377;</span>6.90 </td>
+			<td>1</td>
+		</tr>
+		
+		<tr>
+			<td> <b>Cookie</b></td>
+			<td><span>&#8377;</span>4.20 </td>
+			<td>4</td>
+		</tr>
+		<tr>
+			<td> <b>Total</b></td>
+			<td><span>&#8377;</span>12.10 </td>
+			<td>8</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 
 </html>
