--- a/main.html
+++ b/main.html
@@ -14,15 +14,15 @@
 	<caption>Item Cart</caption>
 	<thead>
 		<tr>
-			<th><b>Item</b>	</th>
-			<th><b>Price</b></th>
-			<th><b>Quantity</b></th>
+			<th>Item</th>
+			<th>Price</th>
+			<th>Quantity</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<td> <b>Banana</b></td>
-			<td><span>&#8377;</span>1.00 </td>
+			<td><b>Banana</b></td>
+			<td><span>&#8377;</span>1.00</td>
 			<td>3</td>
 		</tr>
 		
