--- a/main.html
+++ b/main.html
@@ -11,7 +11,6 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <table>
-	<caption>Item Cart</caption>
 	<thead>
 		<tr>
 			<th>Item</th>
@@ -21,25 +20,25 @@
 	</thead>
 	<tbody>
 		<tr>
-			<td><b>Banana</b></td>
-			<td><span>&#8377;</span>1.00</td>
+			<th>Banana</th>
+			<td>$1.00</td>
 			<td>3</td>
 		</tr>
 		
 		<tr>
-			<td> <b>Burger</b></td>
-			<td><span>&#8377;</span>6.90 </td>
+			<th>Burger</th>
+			<td>$6.90 </td>
 			<td>1</td>
 		</tr>
 		
 		<tr>
-			<td> <b>Cookie</b></td>
-			<td><span>&#8377;</span>4.20 </td>
+		      <th>Cookie</th>
+			<td>$4.20 </td>
 			<td>4</td>
 		</tr>
 		<tr>
-			<td> <b>Total</b></td>
-			<td><span>&#8377;</span>12.10 </td>
+			<th>Total</th>
+			<td>$12.10 </td>
 			<td>8</td>
 		</tr>
 	</tbody>
